# small-key-value-db

./: .gitignore  Cargo.toml  README.md
src/: dbdata.rs  error.rs  main.rs
